setup for multiple deployment

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
 	listen 443;
-	server_name spass.seanp.xyz;
+	server_name spass.seanp.xyz ppass.seanp.xyz mpass.seanp.xyz;
 	add_header Strict-Transport-Security "max-age=2592000";
 	
 	ssl on;
@@ -18,9 +18,9 @@ server {
 	root /var/www/spass;
 
 
-	location = /getpwd {
+	location /spass {
         include uwsgi_params;
-        uwsgi_pass unix:/tmp/spassserver.sock;
+        uwsgi_pass unix:/tmp/$host.sock;
 	}
 	location / {
 		expires 7d;
@@ -30,6 +30,6 @@ server {
 
 server {
 	listen 80;
-	server_name spass.seanp.xyz;
-	return 301 https://$server_name$request_uri;
+	server_name spass.seanp.xyz ppass.seanp.xyz mpass.seanp.xyz;
+	return 301 https://$host$request_uri;
 }
