Add rate limiting

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,9 @@ server {
 
 
 	location /spass {
-        include uwsgi_params;
-        uwsgi_pass unix:/tmp/$host.sock;
+		include uwsgi_params;
+		uwsgi_param HTTP_X_FORWARDED_FOR $remote_addr;
+		uwsgi_pass unix:/tmp/$host.sock;
 	}
 	location / {
 		expires 7d;
