--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 click==6.7
 Flask==0.12.2
+Flask-Limiter==1.0.1
 itsdangerous==0.24
 Jinja2==2.10
+limits==1.2.1
 MarkupSafe==1.0
 pkg-resources==0.0.0
+six==1.11.0
 Werkzeug==0.12.2
