Set up dockerfile

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,10 @@
 server {
-	listen 443;
-	server_name spass.seanp.xyz ppass.seanp.xyz mpass.seanp.xyz;
+	listen 443 ssl;
+	server_name spass.seanp.xyz;
 	add_header Strict-Transport-Security "max-age=2592000";
 	
-	ssl on;
-	ssl_certificate /etc/letsencrypt/live/spass.seanp.xyz/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/spass.seanp.xyz/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/seanp.xyz/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/seanp.xyz/privkey.pem;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
@@ -13,7 +12,7 @@ server {
 
 	ssl_prefer_server_ciphers on;
 
-	ssl_dhparam /etc/dhparam/dhparams.pem;
+	ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 	
 	root /var/www/spass;
 
@@ -31,6 +30,6 @@ server {
 
 server {
 	listen 80;
-	server_name spass.seanp.xyz ppass.seanp.xyz mpass.seanp.xyz;
+	server_name spass.seanp.xyz;
 	return 301 https://$host$request_uri;
 }
