--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
-chdir = /home/spass/spass-server
+socket = 0.0.0.0:8000
+http-socket = 0.0.0.0:8001
+chdir = /app/
 wsgi-file = server.py
 callable = app
-virtualenv = venv
 plugin = python3
 chmod-socket = 666
