--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ server {
 	location /spass {
 		include uwsgi_params;
 		uwsgi_param HTTP_X_FORWARDED_FOR $remote_addr;
-		uwsgi_pass unix:/tmp/$host.sock;
+		uwsgi_pass uwsgi://spass:8000;
 	}
 	location / {
 		expires 7d;
