--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,15 @@
 server {
-	listen 443 ssl;
-	server_name spass.seanp.xyz;
-	add_header Strict-Transport-Security "max-age=2592000";
-	
-	ssl_certificate /etc/letsencrypt/live/seanp.xyz/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/seanp.xyz/privkey.pem;
+    listen 4480;
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    root /www;
 
-	ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
-
-	ssl_prefer_server_ciphers on;
-
-	ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-	
-	root /var/www/spass;
-
-
-	location /spass {
-		include uwsgi_params;
-		uwsgi_param HTTP_X_FORWARDED_FOR $remote_addr;
-		uwsgi_pass uwsgi://spass:8000;
-	}
-	location / {
-		expires 7d;
-		try_files $uri $uri/ /index.html;
-	}
-}
-
-server {
-	listen 80;
-	server_name spass.seanp.xyz;
-	return 301 https://$host$request_uri;
+    location /spass {
+        include uwsgi_params;
+        uwsgi_param HTTP_X_FORWARDED_FOR $remote_addr;
+        uwsgi_pass uwsgi://localhost:8000;
+    }
+    location / {
+        expires 7d;
+        try_files $uri $uri/ /index.html;
+    }
 }
